--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,14 @@
     ],
     "require": {
         "composer/installers": "^1.2",
+        "drupal/admin_toolbar": "^2.3",
         "drupal/core-composer-scaffold": "^8.8",
         "drupal/core-project-message": "^8.8",
-        "drupal/core-recommended": "^8.8"
+        "drupal/core-recommended": "^8.8",
+        "drupal/devel": "^4.0",
+        "drupal/pathauto": "^1.8",
+        "drupal/restui": "^1.18",
+        "drush/drush": "^9.7.1 | ^10.0.0"
     },
     "require-dev": {
         "drupal/core-dev": "^8.8"
