--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -15,6 +15,8 @@ permissions:
   - 'access site-wide contact form'
   - 'administer rest resources'
   - 'post comments'
+  - 'restful get endpoint'
+  - 'restful get user'
   - 'search content'
   - 'skip comment approval'
   - 'use text format basic_html'
